fix width bug which was squashing community engagement slideshow images on smaller screens

--- a/css/community_engagement.css
+++ b/css/community_engagement.css
@@ -21,7 +21,6 @@
 
 #school-slideshow .slideshow-images {
   box-shadow: 7px 0px 5px -5px rgb(var(--secondary-bg-color));
-  width: 100%;
   max-width: 375px;
 }
 
